crates/as2_pcode/src/parser/snapshots/ruasc_as2_pcode__parser__tests__printed@block.pcode.snap
---
source: crates/as2_pcode/src/parser/tests.rs
expression: "parsed.unwrap_or_else(|_| Actions::empty())"
input_file: samples/as2_pcode/block.pcode
---
ConstantPool "outside", "visible", "inside", "outside: ", ", inside: "
Push constant0
Push constant1
DefineLocal
Push constant2
Push constant1
DefineLocal
Push constant3
Push constant0
GetVariable
Add2
Push constant4
Add2
Push constant2
GetVariable
Add2
Trace
Push constant3
Push constant0
GetVariable
Add2
Push constant4
Add2
Push constant2
GetVariable
Add2
Trace
